# cpp_starter_project

./: .gitignore  CMakeLists.txt
imgui/: test.cpp
support/: project_warnings.cmake
